include $(top_srcdir)/common.mk

AM_CPPFLAGS += \
           -I$(top_srcdir) \
           -I$(top_srcdir)/src/common

noinst_LTLIBRARIES = libtomato_common_xdr.la

libtomato_common_xdr_la_LDFLAGS = $(LIB_LDFLAGS)

libtomato_common_xdr_la_SOURCES =

libtomato_common_xdr_la_LIBADD =
libtomato_common_xdr_la_CFLAGS =
