AM_CFLAGS = -I$(top_srcdir)/src/havend/task

noinst_LTLIBRARIES = libhaven_havend_task.la

libhaven_havend_task_la_LDFLAGS = $(LIB_LDFLAGS)

libhaven_havend_task_la_SOURCES = \
                             asm.S \
                             channel.c \
                             context.c \
							 fd.c \
							 net.c \
							 print.c \
							 qlock.c \
							 rendez.c \
							 task.c
